# cpu_gpu_cuda_compile_matrix_mul_test_for_education

./: CMakeLists.txt  gpu_mul.cu  gpu_mul.h  main.cpp  readme.md
